# azure-ai-demos

./: .gitignore  README.md  azure-ai-agent-service.http  azure-ai-demos.sln  logic-app-mcp.http
agent-service/: README.md  azure-ai-agent-service.http
openapi/: WeatherAPI.json
src/01-AIContentSafety/: 01-AIContentSafety.csproj
src/01-AzureAIAgentService/: 01-AzureAIAgentService.csproj  Program.cs
src/01-AzureAIFoundry/: 01-AzureAIFoundry.csproj  Program.cs
src/01-Copilot/: 01-Copilot.csproj  Program.cs
src/01-Evaluation/: 01-Evaluation.csproj  Program.cs
src/01-MCPServer/: 01-MCPServer.csproj  Program.cs
src/01-MCPServerHTTP/: 01-MCPServerHTTP.csproj  MCP.http  OAUTH_SETUP.md  Program.cs  appsettings.Development.json  appsettings.json  http-client.env.json
src/01-MicrosoftAgentFramework/: 01-MicrosoftAgentFramework.csproj  Program.cs
src/01-SemanticKernel/: 01-SemanticKernel.csproj  Program.cs
src/01-SemanticKernelContext/: 01-SemanticKernelContext.csproj  Program.cs  chat1.txt  chat2.txt
src/01-SemanticKernelTravelAssistant/: 01-SemanticKernelTravelAssistant.csproj  Program.cs
src/01-Vision/: 01-Vision.csproj  Program.cs
src/02-EvaluationFoundry/: 02-EvaluationFoundry.csproj  Program.cs  dataset1.jsonl
src/WeatherAPI/: Program.cs  (+1 more)
src/python/contoso-agent/: README.md  main.py  pyproject.toml
src/python/travel-solution/: README.md  main.py  pyproject.toml
src/python/travel-solution/static/css/: chat.css  home.css
src/python/travel-solution/static/js/: chat.js  home.js
src/python/travel-solution/templates/: chat.html  home.html
(+32 files in other folders)
