[project]
name = "contoso-agent"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "azure-identity>=1.25.1",
    "mcp",
    "agent-framework==1.0.0b251223",
    "agent-framework-core==1.0.0b251223",
    "azure-ai-agents==1.2.0b5",
    "agent-framework-azure-ai",
    "azure-ai-projects>=2.0.0b1"
]

[tool.uv]
prerelease = "allow"
