[project]
name = "travel-solution"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "azure-identity>=1.25.1",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "jinja2>=3.1.4",
    "fastmcp",
    "mcp",
    "agent-framework==1.0.0b251223",
    "agent-framework-core==1.0.0b251223",
    "azure-ai-agents==1.2.0b5",
    "agent-framework-azure-ai",
]

[tool.uv]
prerelease = "allow"
